--- a/platformio.ini
+++ b/platformio.ini
@@ -564,7 +564,18 @@ upload_speed = 921600
 board_build.partitions = huge_app.csv
 build_flags = 
 	;-DDEBUG_MEMORY=1
-	-D ESP32_ST7735=1	
+	-D ESP32_ST7735=1
+ 	;There are different ST7735 available so check which of the variants below works for you
+ 	;-D ST7735_INITB
+	;-D ST7735_GREENTAB
+	;-D ST7735_GREENTAB2
+	;-D ST7735_GREENTAB3
+	;-D ST7735_GREENTAB128    ; For 128 x 128 display
+	;-D ST7735_GREENTAB160x80 ; For 160 x 80 display (BGR, inverted, 26 offset)
+	;-D ST7735_ROBOTLCD       ; For some RobotLCD arduino shields (128x160, BGR, https://docs.arduino.cc/retired/getting-started-guides/TFT)
+	;-D ST7735_REDTAB
+	;-D ST7735_BLACKTAB
+	;-D ST7735_REDTAB160x80   ; For 160 x 80 display with 24 pixel offset
 	-DUSER_SETUP_LOADED=1
 	-DST7735_DRIVER=1
 	-DTFT_WIDTH=128
