--- a/platformio.ini
+++ b/platformio.ini
@@ -570,7 +570,7 @@ build_flags =
 	;-D ST7735_GREENTAB
 	;-D ST7735_GREENTAB2
 	;-D ST7735_GREENTAB3
-	;-D ST7735_GREENTAB128    ; For 128 x 128 display
+	-D ST7735_GREENTAB128    ; For 128 x 128 display
 	;-D ST7735_GREENTAB160x80 ; For 160 x 80 display (BGR, inverted, 26 offset)
 	;-D ST7735_ROBOTLCD       ; For some RobotLCD arduino shields (128x160, BGR, https://docs.arduino.cc/retired/getting-started-guides/TFT)
 	;-D ST7735_REDTAB
