added RGB order

--- a/platformio.ini
+++ b/platformio.ini
@@ -565,6 +565,9 @@ board_build.partitions = huge_app.csv
 build_flags = 
 	;-DDEBUG_MEMORY=1
 	-D ESP32_ST7735=1
+ 	;Test which RGB color order works for your ST7735
+  	;-D TFT_RGB_ORDER=TFT_RGB
+ 	;-D TFT_RGB_ORDER=TFT_BGR 
  	;There are different ST7735 TFTs available so test which of the variants below works for you
  	;-D ST7735_INITB
 	;-D ST7735_GREENTAB
